--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,33 @@ android {
 }
 
 dependencies {
+
+    def support_version = "28.0.0"
+    def retrofit_version = '2.5.0'
+    def arch_version = '1.1.1'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    implementation "com.android.support:appcompat-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+    implementation "com.android.support:recyclerview-v7:$support_version"
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+
+    //Bibliotecas Network (Consumo de API)
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    //Arch
+    implementation "android.arch.lifecycle:extensions:$arch_version"
+
+    //Stetho
+    implementation 'com.facebook.stetho:stetho:1.5.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.1'
+
+    implementation 'com.airbnb.android:lottie:2.7.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
